fix: add gap between filter badges

--- a/src/pages/view/FilterBar/styles/FilterBar.module.css
+++ b/src/pages/view/FilterBar/styles/FilterBar.module.css
@@ -6,4 +6,5 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    gap: var(--spacers-dp8);
 }
